@@ -1,3 +1,8 @@
+2011-09-27  Daiki Ueno  <ueno@unixuser.org>
+
+	* plstore.el (plstore-select-keys, plstore-encrypt-to): Clarify
+	documentation.
+
 2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-wait-for-response): Message less (bug#9540).
